--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@
    FLASK_DEBUG=1
 
    # Database Configuration
-   DATABASE_URL=sqlite:///data/schema.db
+   DATABASE_URL=sqlite:///data/test.db
+   SCHEMA_DB_URL =sqlite:///data/schema.db
 
    # Server Configuration
    PORT=5000
